docs refactored
