# internal/handler/handler.go
@@ -1,7 +1,6 @@
 package handler
 
 import (
-	"encoding/csv"
 	_ "evo-test/docs"
 	"evo-test/internal/apperror"
 	"evo-test/internal/models"
@@ -9,11 +8,17 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/swaggo/files"       // swagger embed files
 	"github.com/swaggo/gin-swagger" // gin-swagger middleware
-	"io"
 	"net/http"
-	"strconv"
-	"strings"
-	"time"
+)
+
+const (
+	paramsCtx     = "params"
+	parsedDataCtx = "parsedData"
+
+	swaggerUrl     = "/swagger/*any"
+	apiUrl         = "/api"
+	loadDataUrl    = "/load-data"
+	transactionUrl = "/transaction"
 )
 
 func newErrorResponse(ctx *gin.Context, statusCode int, message string) {
@@ -35,105 +40,38 @@ func New(service service.Service) Handler {
 func (h *handler) Register() *gin.Engine {
 	router := gin.New()
 
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	router.GET(swaggerUrl, ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	api := router.Group("/api")
+	api := router.Group(apiUrl)
 	{
-		api.POST("/load-csv", h.ParseCSVFile)
-		api.GET("/transaction", h.GetTransaction)
+		api.POST(loadDataUrl, h.ParseFileData(h.LoadData))
+		api.GET(transactionUrl, h.TransactionQueryParams(h.GetTransaction))
 	}
 
 	return router
 }
 
-func (h *handler) ParseCSVFile(ctx *gin.Context) {
-	ctx.Writer.Header().Set("Content-Type", "form/json")
-	err := ctx.Request.ParseMultipartForm(32 << 20)
-	if err != nil {
-		newErrorResponse(ctx, http.StatusBadRequest, err.Error())
-		return
-	}
-	files, ok := ctx.Request.MultipartForm.File["file"]
-	if len(files) == 0 {
-		if !ok {
-			newErrorResponse(ctx, http.StatusBadRequest, "something wrong with file you provided")
-			return
-		} else {
-			newErrorResponse(ctx, http.StatusBadRequest, "file not provided")
-			return
-		}
-	}
-
-	fileInfo := files[0]
-	fileReader, err := fileInfo.Open()
-	if err != nil {
-		newErrorResponse(ctx, http.StatusBadRequest, err.Error())
+// LoadData godoc
+// @Summary      Load data to database from a csv file
+// @Description  load data
+// @Tags         api
+// @Accept       multipart/form-data
+// @Produce      json
+// @Param		 file formData file true "CSV file with data"
+// @Success      201  {string}  string
+// @Failure      400  {object}  apperror.Error
+// @Failure      500  {object}  apperror.Error
+// @Router       /api/load-data [post]
+func (h *handler) LoadData(ctx *gin.Context) {
+	parsedData, exists := ctx.Get(parsedDataCtx)
+	if !exists {
+		newErrorResponse(ctx, http.StatusBadRequest, "data wasn't found")
 		return
 	}
 
-	var parsedData []models.Transaction
-	r := csv.NewReader(fileReader)
+	parsedDataTr := parsedData.([]models.Transaction)
 
-	skipFirst := 0
-	for {
-		if skipFirst == 0 {
-			skipFirst++
-			continue
-		}
-
-		read, err := r.Read()
-		if err == io.EOF {
-			break
-		} else if err != nil {
-			continue
-		}
-
-		transactionId, err := strconv.Atoi(read[0])
-		requestId, err := strconv.Atoi(read[1])
-		terminalId, err := strconv.Atoi(read[2])
-		partnerObjectId, err := strconv.Atoi(read[3])
-		amountTotal, err := strconv.ParseFloat(read[4], 32)
-		amountOriginal, err := strconv.ParseFloat(read[5], 32)
-		commissionPS, err := strconv.ParseFloat(read[6], 32)
-		commissionClient, err := strconv.ParseFloat(read[7], 32)
-		commissionProvider, err := strconv.ParseFloat(read[8], 32)
-		dateInput, err := time.Parse("2006-01-02 15:04:05", read[9])
-		datePost, err := time.Parse("2006-01-02 15:04:05", read[10])
-		serviceId, err := strconv.Atoi(read[14])
-		payeeId, err := strconv.Atoi(read[16])
-		payeeBankMfo, err := strconv.Atoi(read[18])
-
-		if err != nil {
-			newErrorResponse(ctx, http.StatusBadRequest, err.Error())
-			return
-		}
-
-		parsedData = append(parsedData, models.Transaction{
-			TransactionId:      transactionId,
-			RequestId:          requestId,
-			TerminalId:         terminalId,
-			PartnerObjectId:    partnerObjectId,
-			AmountTotal:        float32(amountTotal),
-			AmountOriginal:     float32(amountOriginal),
-			CommissionPS:       float32(commissionPS),
-			CommissionClient:   float32(commissionClient),
-			CommissionProvider: float32(commissionProvider),
-			DateInput:          dateInput,
-			DatePost:           datePost,
-			Status:             read[11],
-			PaymentType:        read[12],
-			PaymentNumber:      read[13],
-			ServiceId:          serviceId,
-			Service:            read[15],
-			PayeeId:            payeeId,
-			PayeeName:          read[17],
-			PayeeBankMfo:       payeeBankMfo,
-			PayeeBankAccount:   read[19],
-			PaymentNarrative:   read[20],
-		})
-	}
-
-	err = h.service.LoadData(parsedData)
+	err := h.service.LoadData(parsedDataTr)
 	if err != nil {
 		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
 		return
@@ -149,48 +87,30 @@ func (h *handler) ParseCSVFile(ctx *gin.Context) {
 // @Accept       json
 // @Produce      json
 // @Param		 transactionId query int false "Transaction id"
-// @Param 		 terminalIds query string false "Array with terminal ids, example: '1,2,3,4,5'"
+// @Param 		 terminalIds query string false "Array with terminal ids, example: 3506,3507"
 // @Param		 status query string false "Transaction status"
 // @Param		 paymentType query string false "Transaction payment type"
-// @Param		 datePost query string false "Transaction date post interval, example: '<fromTime>:<toTime>'"
+// @Param		 datePostFrom query string false "Transaction min date post"
+// @Param		 datePostTo query string false "Transaction max date post"
 // @Param		 paymentNarrative query string false "Transaction payment narrative"
 // @Success      200  {array}  	models.Transaction
-// @Failure      400  {object}  object
-// @Failure      500  {object}  object
+// @Failure      400  {object}  apperror.Error
+// @Failure      500  {object}  apperror.Error
 // @Router       /api/transaction [get]
 func (h *handler) GetTransaction(ctx *gin.Context) {
-	var err error
-
-	var transactionIdInt int
-	transactionId := ctx.Query("transactionId")
-	if transactionId != "" {
-		transactionIdInt, err = strconv.Atoi(transactionId)
-		if err != nil {
-			newErrorResponse(ctx, http.StatusBadRequest, "invalid transaction id")
-			return
-		}
+	paramsStr, exists := ctx.Get(paramsCtx)
+	if !exists {
+		newErrorResponse(ctx, http.StatusBadRequest, "query params wasn't found")
+		return
 	}
 
-	terminalIds := strings.Split(ctx.Query("terminalIds"), ",")
-	if terminalIds[0] != "" {
-		for _, id := range terminalIds {
-			_, err = strconv.Atoi(id)
-			if err != nil {
-				newErrorResponse(ctx, http.StatusBadRequest, "invalid terminal ids")
-				return
-			}
-		}
-	}
+	params := paramsStr.(models.SearchParams)
 
-	transactions, err := h.service.GetTransactions(models.SearchParams{
-		TransactionId:    transactionIdInt,
-		TerminalIds:      terminalIds,
-		Status:           ctx.Query("status"),
-		PaymentType:      ctx.Query("paymentType"),
-		DatePostFrom:     ctx.Query("datePostFrom"),
-		DatePostTo:       ctx.Query("datePostTo"),
-		PaymentNarrative: ctx.Query("paymentNarrative"),
-	})
+	transactions, err := h.service.GetTransactions(params)
+	if err != nil {
+		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
+		return
+	}
 
 	ctx.JSON(http.StatusOK, transactions)
 }
